Update: Add Gallary index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#four">Gallery</a></li>
+						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -111,6 +112,51 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
+								<h3>Photo Gallery</h3>
+								<p>Explore our collection of images. Click on any photo to view it in larger size.</p>
+								<div class="row gtr-uniform">
+								    <!-- Image 1 -->
+								    <div class="col-4 col-12-medium">
+									<a href="image1-large.jpg" class="image-link">
+									    <img src="image1-thumb.jpg" alt="Photo 1" class="image-thumbnail">
+									</a>
+								    </div>
+								    <!-- Image 2 -->
+								    <div class="col-4 col-12-medium">
+									<a href="image2-large.jpg" class="image-link">
+									    <img src="image2-thumb.jpg" alt="Photo 2" class="image-thumbnail">
+									</a>
+								    </div>
+								    <!-- Image 3 -->
+								    <div class="col-4 col-12-medium">
+									<a href="image3-large.jpg" class="image-link">
+									    <img src="image3-thumb.jpg" alt="Photo 3" class="image-thumbnail">
+									</a>
+								    </div>
+								    <!-- Image 4 -->
+								    <div class="col-4 col-12-medium">
+									<a href="image4-large.jpg" class="image-link">
+									    <img src="image4-thumb.jpg" alt="Photo 4" class="image-thumbnail">
+									</a>
+								    </div>
+								    <!-- Image 5 -->
+								    <div class="col-4 col-12-medium">
+									<a href="image5-large.jpg" class="image-link">
+									    <img src="image5-thumb.jpg" alt="Photo 5" class="image-thumbnail">
+									</a>
+								    </div>
+								    <!-- Image 6 -->
+								    <div class="col-4 col-12-medium">
+									<a href="image6-large.jpg" class="image-link">
+									    <img src="image6-thumb.jpg" alt="Photo 6" class="image-thumbnail">
+									</a>
+								    </div>
+								</div>
+								</div>
+							</section>
+						<!-- Five -->
+							<section id="five">
+								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<form method="post" action="#">
@@ -129,7 +175,6 @@
 									</form>
 								</div>
 							</section>
-
 						<!-- Five -->
 						<!--
 							<section id="five">
