Update: Change Path

--- a/index.html
+++ b/index.html
@@ -117,37 +117,37 @@
 								<div class="row gtr-uniform">
 								    <!-- Image 1 -->
 								    <div class="col-4 col-12-medium">
-									<a href="image1-large.jpg" class="image-link">
+									<a href="images/image1-large.jpg" class="image-link">
 									    <img src="image1-thumb.jpg" alt="Photo 1" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 2 -->
 								    <div class="col-4 col-12-medium">
-									<a href="image2-large.jpg" class="image-link">
+									<a href="images/image2-large.jpg" class="image-link">
 									    <img src="image2-thumb.jpg" alt="Photo 2" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 3 -->
 								    <div class="col-4 col-12-medium">
-									<a href="image3-large.jpg" class="image-link">
+									<a href="images/image3-large.jpg" class="image-link">
 									    <img src="image3-thumb.jpg" alt="Photo 3" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 4 -->
 								    <div class="col-4 col-12-medium">
-									<a href="image4-large.jpg" class="image-link">
+									<a href="images/image4-large.jpg" class="image-link">
 									    <img src="image4-thumb.jpg" alt="Photo 4" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 5 -->
 								    <div class="col-4 col-12-medium">
-									<a href="image5-large.jpg" class="image-link">
+									<a href="images/image5-large.jpg" class="image-link">
 									    <img src="image5-thumb.jpg" alt="Photo 5" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 6 -->
 								    <div class="col-4 col-12-medium">
-									<a href="image6-large.jpg" class="image-link">
+									<a href="images/image6-large.jpg" class="image-link">
 									    <img src="image6-thumb.jpg" alt="Photo 6" class="image-thumbnail">
 									</a>
 								    </div>
