--- a/index.html
+++ b/index.html
@@ -118,37 +118,37 @@
 								    <!-- Image 1 -->
 								    <div class="col-4 col-12-medium">
 									<a href="images/image1-large.jpg" class="image-link">
-									    <img src="image1-thumb.jpg" alt="Photo 1" class="image-thumbnail">
+									    <img src="images/image1-large.jpg" alt="Photo 1" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 2 -->
 								    <div class="col-4 col-12-medium">
 									<a href="images/image2-large.jpg" class="image-link">
-									    <img src="image2-thumb.jpg" alt="Photo 2" class="image-thumbnail">
+									    <img src="images/image2-large.jpg" alt="Photo 2" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 3 -->
 								    <div class="col-4 col-12-medium">
 									<a href="images/image3-large.jpg" class="image-link">
-									    <img src="image3-thumb.jpg" alt="Photo 3" class="image-thumbnail">
+									    <img src="images/image3-large.jpg" alt="Photo 3" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 4 -->
 								    <div class="col-4 col-12-medium">
 									<a href="images/image4-large.jpg" class="image-link">
-									    <img src="image4-thumb.jpg" alt="Photo 4" class="image-thumbnail">
+									    <img src="images/image4-large.jpg" alt="Photo 4" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 5 -->
 								    <div class="col-4 col-12-medium">
 									<a href="images/image5-large.jpg" class="image-link">
-									    <img src="image5-thumb.jpg" alt="Photo 5" class="image-thumbnail">
+									    <img src="images/image5-large.jpg" alt="Photo 5" class="image-thumbnail">
 									</a>
 								    </div>
 								    <!-- Image 6 -->
 								    <div class="col-4 col-12-medium">
 									<a href="images/image6-large.jpg" class="image-link">
-									    <img src="image6-thumb.jpg" alt="Photo 6" class="image-thumbnail">
+									    <img src="images/image6-large.jpg" alt="Photo 6" class="image-thumbnail">
 									</a>
 								    </div>
 								</div>
